2001-03-28  Richard Henderson  <rth@redhat.com>

	IA-64 ABI Exception Handling:
	* acinclude.m4 (GLIBCPP_ENABLE_SJLJ_EXCEPTIONS): New.
	* configure.in: Use it.
	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerate.
        * libsupc++/Makefile.am (sources): Update files list.
        * libsupc++/Makefile.in: Regenerate.
        * libsupc++/eh_alloc.cc, libsupc++/eh_aux_runtime.cc: New files.
        * libsupc++/eh_catch.cc, libsupc++/eh_exception.cc: New files.
	* libsupc++/eh_globals.cc, libsupc++/eh_personality.cc: New files.
        * libsupc++/eh_terminate.cc, libsupc++/eh_throw.cc: New files.
        * libsupc++/exception_support.cc: Remove.
        * libsupc++/exception_support.h: Remove.
        * libsupc++/pure.cc: Use std::terminate.
        * libsupc++/tinfo2.cc (__throw_type_match_rtti_2): Remove.
        (__is_pointer): Remove.
        * libsupc++/unwind-cxx.h: New file.
        * libsupc++/vec.cc (uncatch_exception): Update for new abi.

2001-03-27  Alexandre Oliva  <aoliva@redhat.com>

	* libsupc++/Makefile.am (CXXLINK): Use CXX again, and choose
	CXX tag explicitly.
	* src/Makefile.am (CXXLINK): Likewise.
	* libsupc++/Makefile.in, src/Makefile.in: Rebuilt.

2001-03-27  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/c++config (_STL_USE_CONCEPT_CHECKS): Disable by default.

2001-03-26  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * libstdc++-v3/tests_flags.in: Change the order of libstdc++
          and libc 

2001-03-26  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/basic_file.h (get_fileno): Remove.
	(_M_fileno): Remove.
	(_M_cfile_created): Add.
	(basic_file::basic_file(__c_file_type*, openmode): Add.
	(basic_file::basic_file(int, const char*, openmode): Remove.
	* include/bits/fstream.tcc (basic_fstream::basic_filebuf(int __fd,
	const char*, ios_base::openmode): Don't allocate
	internal buffers. Turn off internal buffers.
	(basic_filebuf::overflow): Remove test for null buffer.